# waypoint-media-site

./: .gitignore  .htaccess  .pre-commit-config.yaml  .prettierrc  .secrets.baseline  CNAME  COMMERCIAL_CONFIG.md  DEPLOYMENT.md  DEVELOPMENT.md  GITHUB_PAGES_SETUP.md  HONEYBOOK-INTEGRATION.md  Makefile  PROJECT_COMPLETION_REPORT.md  QUICK-REFERENCE.md  README-ORGANIZED.md  README-real-estate.md  README.md  REAL_ESTATE_PHOTOS.md  WEBSITE-UPDATES-SUMMARY.md  clean_urls.sh  commercial.html  commercial.js  commercial.json  contact-form.js  contact.html  debug-portfolio.html  drone.html  gallery.html  global-video-config.js  index.html  manage_photos.py  photos.json  pyproject.toml  real-estate.html  real-estate.js  release_photos.py  release_photos_s3.py  resume.html  setup.sh  styles.css  (+3 more)
.github/workflows/: pages.yml
assets/real-estate/beachfront-condominium/: README.md
assets/real-estate/luxury-waterfront-estate/: README.md
assets/real-estate/modern-office-complex/: README.md
assets/real-estate/suburban-family-home/: README.md
config/: commercial.json  photos.json
docs/: CLAUDE.md  CLEAN-URLS.md  GITHUB_PAGES_SETUP.md  README.md
pages/: .htaccess  commercial.html  contact.html  debug-portfolio.html  drone.html  freedom.html  gallery.html  index.html  real-estate.html  resume.html  terms.html
reviews/: README.md
src/css/: styles.css
src/js/: commercial.js  real-estate.js  reviews.js  video-manager.js  video-preloader-safe.js  video-preloader.js
tools/: Makefile  cors_server.py  manage_photos.py  toggle-video-preloader.sh
