[project]
name = "waypoint-media-site"
version = "0.1.0"
description = "Professional aerial cinematography and drone content creation services by Waypoint Media Productions"
authors = [
    {name = "Clint Smith",email = "clint@waypointmediapro.com"}
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.3.0"
mypy = "^1.17.0"
detect-secrets = "^1.5.0"
